# triangle-mesh-collision

./: .gitignore  CMakeLists.txt  README.md  hasCollision.py
src/: collision_detect.cpp  collision_detect.h  main.cpp
